--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <title>Fintech hh</title>
+  <title>Fintech</title>
 </head>
 
 <body>
-
+  <p>Just testing</p>
 </body>
 
