--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
+<html>
 <head>
-  <title>Fintech hh</title>
+  <title>Fintech</title>
 </head>
 
 <body>
-  <p>Just testing</p>
+  <div>
+    <div class="theme">
+      <ul>
+	      <li>Home</li>
+	      <li>About</li>
+	      <li>Sign in</li>
+      </ul>
+    </div>
+  </div>
 </body>
-
+</html>
