--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 
 <body>
   <div>
+    img{
+	  position:relative;
+	  bottom:10px;
+	  left:10px  
+	  } 	  
     <div class="theme">
       <ul>
 	      <li>Home</li>
 	      <li>About</li>
 	      <li>Sign in</li>
       </ul>
+     <img src="下載(1).png" alt="fb" height="42" width="42">	    
     </div>
     	  
   </div>
