--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <link rel="stylesheet" type="text/css" href="css/general.css">
 <head>
   <title>Fintech</title>
+  <style>
+	  img{
+	      position:relative;
+	      bottom:10px;
+	      left:10px;	  
+	  
+	  }
 </head>
 
 <body>
@@ -14,7 +21,7 @@
 	      <li>Sign in</li>
       </ul>	    
     </div>  
-	 
+    <img src="下載中(1).png" alt="fb" height="42" width="42">	 
   </div>
 </body>
 </html>
