--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	      <li>Sign in</li>
       </ul>	    
     </div>  
-    <img src="下載中(1).png" alt="fb" height="42" width="42">	 
+    <img src="img/下載中(1).png" alt="fb" height="42" width="42">	 
   </div>
 </body>
 </html>
