--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <link rel="stylesheet" type="text/css" href="css/general.css">
 <head>
   <title>Fintech</title>
-  
+  <style>
+	  img{
+	     position:relative;
+	     bottom:5px;
+             		  
+	  
+	  }
+  </style>	  
 </head>
 
 <body>
@@ -15,7 +22,7 @@
 	      <li>Sign in</li>
       </ul>	    
     </div>  
-    	 
+    <img src="下載(1).png" alt="fb" height="42" width="42">	 
   </div>
 </body>
 </html>
