--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="css/general.css">
-<style>
-	  img{
-	     position:relative;
-	     top:40px;
-             		  
-	  
-	  }
-</style>	  	
+<link rel="stylesheet" type="text/css" href="css/general.css">	
 <head>
   <title>Fintech</title>
-  
+  <style>
+	  img{
+	     position:relative;
+	     top:40vw;	  
+	  }
+  </style>	  
 </head>
 
 <body>
