--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	      <li>Sign in</li>
       </ul>	    
     </div>  
-    	 
+	<p class="fintech">
+		Fintech Money
+	  </p>
+   	 
   </div>
 </body>
 </html>
