--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	      <li>Sign in</li>
       </ul>	    
     </div>  
-	<p class="fintech">
+	<p class="fintech_money">
 		Fintech Money
 	  </p>
    	 
