--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div>	 
+  <div class="block1">	 
     <div class="theme">
       <ul>
 	      <li>Home</li>
@@ -15,10 +15,14 @@
 	      <li>Sign in</li>
       </ul>	    
     </div>  
-	<p class="FintechMoney">
+	<!--<p class="FintechMoney">
 		Fintech Money
-	  </p>
+	  </p>-->
    	 
   </div>
+  <div class="block2">
+  </div>
+  <div class="block3">
+  </div>      
 </body>
 </html>
