fix the menu misalign problem
need the correct size icon

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="block1">	 
     <div class="theme">
-      <ul>
-	      <li>Home</li>
-	      <li>About</li>
-	      <li>Sign in</li>
-      </ul>	    
+		  <span class="th_sub_f"><img src="img/fintech_logo--3.png" ></span>
+		  <span class="Fintech">Fintech</span>
+	      <span class="th_sub">Home</span>
+	      <span class="th_sub">About</span>
+	      <span class="th_sub">Sign in</span>  
     </div>  
 	<!--<p class="FintechMoney">
 		Fintech Money
