--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<!--<p class="FintechMoney">
 		Fintech Money
 	  </p>-->
-   	 
+   	 	<span class="apple"><img src="img/app_store.png"  width="80%"></span>
+		<span class="google"><img src="img/google_play.png" width="80%" ></span>    
   </div>
   <div class="block2">
   </div>
