--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	  </p>-->
    	 	<span class="apple"><img src="img/app_store.png"  width="80%"></span>
 		<span class="google"><img src="img/google_play.png" width="80%" ></span>  
-	        <span class="fb"><img src="img/fb.png" height="42" width="42"></span>
-	        <span class="youtube"><img src="img/youtube.png" height="42" width="42"></span>
-	        <span class="mail"><img src="img/mail.png" height="42" width="42"></span>
+	        <span class="fb"><img src="img/fb.png" height="42" width="40%"></span>
+	        <span class="youtube"><img src="img/youtube.png" width="40%"></span>
+	        <span class="mail"><img src="img/mail.png" width="40%"></span>
   </div>
   <div class="block2">
   </div>
