--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<!--<p class="FintechMoney">
 		Fintech Money
 	  </p>-->
+	  	<span class="download"><img src="img/download.png" width="120%" ></span> 
    	 	<span class="apple"><img src="img/app_store.png"  width="80%"></span>
 		<span class="google"><img src="img/google_play.png" width="80%" ></span>  
 	        <span class="fb"><img src="img/fb.png" width="40%"></span>
