--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+5 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="css/general.css">	
 <head>
@@ -9,7 +9,7 @@
 <body>
   <div class="block1">	 
     <div class="theme">
-		  <span class="th_sub_f"><img src="img/fintech_logo--3.png" ></span>
+		  <span class="th_sub_f"><img src="img/fintech_logo--3.png" width="50%"></span>
 		  <span class="Fintech">Fintech</span>
 	      <span class="th_sub">Home</span>
 	      <span class="th_sub">About</span>
