--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		Fintech Money
 	  </p>-->
 	  	<span class="download"><img src="img/download.png" width="120%" ></span> 
-   	 	<span class="apple"><img src="img/app_store.png"  width="80%"></span>
-		<span class="google"><img src="img/google_play.png" width="80%" ></span>  
+   	 	<span class="apple"><a href="https://appstore.com"><img src="img/app_store.png"  width="80%"></a></span>
+		<span class="google"><a href="https://play.google.com"><img src="img/google_play.png" width="80%" ></a></span>  
 	        <span class="fb"><img src="img/fb.png" width="40%"></span>
 	        <span class="youtube"><img src="img/youtube.png" width="40%"></span>
 	        <span class="mail"><img src="img/mail.png" width="40%"></span>
