--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="theme">
 		  <span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 		  <span class="Fintech">Fintech</span>
-	      <span class="th_sub">Home</span>
+	      <a href=".index.html"><span class="th_sub">Home</span><a>
 	      <span class="th_sub">About</span>
 	      <span class="th_sub">Sign in</span>  
     </div>  
@@ -21,9 +21,9 @@
 	  	<span class="download"><img src="img/download.png" width="120%" ></span> 
    	 	<span class="apple"><a href="https://appstore.com"><img src="img/app_store.png"  width="80%"></a></span>
 		<span class="google"><a href="https://play.google.com"><img src="img/google_play.png" width="80%" ></a></span>  
-	        <span class="fb"><img src="img/fb.png" width="40%"></span>
-	        <span class="youtube"><img src="img/youtube.png" width="40%"></span>
-	        <span class="mail"><img src="img/mail.png" width="40%"></span>
+	        <span class="fb"><a href="https://facebook.com"><img src="img/fb.png" width="40%"></a></span>
+	        <span class="youtube"><a href="https://youtube.com"><img src="img/youtube.png" width="40%"></a></span>
+	        <span class="mail"><a href><img src="img/mail.png" width="40%"></a></span><!--沒有放網頁，只是做成類超連結-->
   </div>
   <div class="block2">
   </div>
