--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		Fintech Money
 	  </p>-->
 	  	<span class="download"><img src="img/download.png" width="120%" ></span> 
-   	 	<span class="apple"><a href="https://appstore.com"><img src="img/app_store.png"  width="80%"></a></span>
+   	 	<span class="apple"><a href="https://itunes.apple.com"><img src="img/app_store.png"  width="80%"></a></span>
 		<span class="google"><a href="https://play.google.com"><img src="img/google_play.png" width="80%" ></a></span>  
 	        <span class="fb"><a href="https://facebook.com"><img src="img/fb.png" width="40%"></a></span>
 	        <span class="youtube"><a href="https://youtube.com"><img src="img/youtube.png" width="40%"></a></span>
