--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="theme">
 		  <span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 		  <span class="Fintech">Fintech</span>
-	      <a href=".index.html"><span class="th_sub">Home</span><a>
+	      <a href=".index.html"><span class="th_sub">Home</span></a>
 	      <span class="th_sub">About</span>
 	      <span class="th_sub">Sign in</span>  
     </div>  
