--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="theme">
 		  <span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 		  <span class="Fintech">Fintech</span>
-	      <span class="th_sub"><a style="text-decoration:none" href="">Home</a></span>
-	      <span class="th_sub">About</span>
-	      <span class="th_sub">Sign in</span>  
+	      <span class="th_sub"><a style="text-decoration:none;font-color:white" href="">Home</a></span>
+	      <span class="th_sub"><a style="text-decoration:none;font-color:white" href="">About</a></span>
+	      <span class="th_sub"><a style="text-decoration:none;font-color:white" href="">Sign in</a></span>  
     </div>  
 	<!--<p class="FintechMoney">
 		Fintech Money
