--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="theme">
 		  <span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 		  <span class="Fintech">Fintech</span>
-	      <span class="th_sub"><a style="text-decoration:none;color:white;font-family:'Calibri';" href="">Home</a></span>
-	      <span class="th_sub"><a style="text-decoration:none;color:white;font-family:'Calibri';" href="">About</a></span>
-	      <span class="th_sub"><a style="text-decoration:none;color:white;font-family:'Calibri';" href="">Sign in</a></span>  
+	      <span class="th_sub"><a target = "_blank" style="text-decoration:none;color:white;font-family:'Calibri';" href="">Home</a></span>
+	      <span class="th_sub"><a target = "_blank" style="text-decoration:none;color:white;font-family:'Calibri';" href="">About</a></span>
+	      <span class="th_sub"><a target = "_blank" style="text-decoration:none;color:white;font-family:'Calibri';" href="">Sign in</a></span>  
     </div>  
 	<!--<p class="FintechMoney">
 		Fintech Money
 	  </p>-->
 	  	<span class="download"><img src="img/download.png" width="120%" ></span> 
-   	 	<span class="apple"><a href="https://itunes.apple.com"><img src="img/app_store.png"  width="80%"></a></span>
-		<span class="google"><a href="https://play.google.com"><img src="img/google_play.png" width="80%" ></a></span>  
-	        <span class="fb"><a href="https://facebook.com"><img src="img/fb.png" width="40%"></a></span>
-	        <span class="youtube"><a href="https://youtube.com"><img src="img/youtube.png" width="40%"></a></span>
-	        <span class="mail"><a href><img src="img/mail.png" width="40%"></a></span><!--沒有放網頁，只是做成類超連結-->
+   	 	<span class="apple"><a target = "_blank" href="https://itunes.apple.com"><img src="img/app_store.png"  width="80%"></a></span>
+		<span class="google"><a target = "_blank" href="https://play.google.com"><img src="img/google_play.png" width="80%" ></a></span>  
+	        <span class="fb"><a target = "_blank" href="https://facebook.com"><img src="img/fb.png" width="40%"></a></span>
+	        <span class="youtube"><a target = "_blank" href="https://youtube.com"><img src="img/youtube.png" width="40%"></a></span>
+	        <span class="mail"><a target = "_blank" href><img src="img/mail.png" width="40%"></a></span><!--沒有放網頁，只是做成類超連結-->
   </div>
   <div class="block2">
   </div>
