--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="block1">	 
     <div class="theme">
-		  <span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
-		  <span class="Fintech">Fintech</span>
-	      <a target = "_blank" style="text-decoration:none;color:white;font-size:2.2vw;" href=""><span class="th_sub">Home</span></a>
-	      <span class="th_sub"><a target = "_blank" style="text-decoration:none;color:white;" href="">About</a></span>
-	      <span class="th_sub"><a target = "_blank" style="text-decoration:none;color:white;" href="">Sign in</a></span>  
+	<span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
+	<span class="Fintech">Fintech</span>
+	<a target = "_blank" href=""><span class="th_sub">Home</span></a>
+	<span class="th_sub"><a target = "_blank" href="">About</a></span>
+	<span class="th_sub"><a target = "_blank" href="">Sign in</a></span>  
     </div>  
 	<!--<p class="FintechMoney">
 		Fintech Money
