--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 	<span class="Fintech">Fintech</span>
 	<a target = "_blank" href=""><span class="th_sub">Home</span></a>
-	<span class="th_sub"><a target = "_blank" href="">About</a></span>
-	<span class="th_sub"><a target = "_blank" href="">Sign in</a></span>  
+	<a target = "_blank" href=""><span class="th_sub">About</span></a>
+	<a target = "_blank" href=""><span class="th_sub">Sign in</span></a> 
     </div>  
 	<!--<p class="FintechMoney">
 		Fintech Money
