--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 	        <span class="fb"><a target = "_blank" href="https://facebook.com"><img src="img/fb.png" width="40%"></a></span>
 	        <span class="youtube"><a target = "_blank" href="https://youtube.com"><img src="img/youtube.png" width="40%"></a></span>
 	        <span class="mail"><a target = "_blank" href><img src="img/mail.png" width="40%"></a></span><!--沒有放網頁，只是做成類超連結-->
+  	<div class="p1_r_c">
+		<span class="fintech_w">Fintech</span>
+		<span class="fintech_t">Save your money<br>
+		Wisely &amp Everywhere</span>
+		<span class="fintech_c"><img src="img/fintech_logo.png" width="180%"></span>	
+	</div>
   </div>
   <div class="block2">
   </div>
