--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   	<div class="p1_r_c">
 		<span class="fintech_w">Fintech</span>
 		<span class="fintech_t">Save your money<br>
-		Wisely &amp Everywhere</span>
+		Wisely &amp; Everywhere</span>
 		<span class="fintech_c"><img src="img/fintech_logo.png" width="180%"></span>	
 	</div>
   </div>
