--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="css/general.css">	
 <head>
   <title>Fintech</title>
-  
+  <style> a{text-decoration:none} </style>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     <div class="theme">
 	<span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 	<span class="Fintech">Fintech</span>
-	<a target = "_blank" href=""><span class="th_sub">Home</span></a>
+	<a target = "_blank" href="" style="color:white;"><span class="th_sub">Home</span></a>
 	<a target = "_blank" href=""><span class="th_sub">About</span></a>
 	<a target = "_blank" href=""><span class="th_sub">Sign in</span></a> 
     </div>  
