--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
 	</div>
   </div>
   <div class="block2">
+	  <div class="p2_c_t">
+		
+	<div class="feature">Features</div>
+		
+	<span class="feature_icon"><img src="img/cheap-03.png" width="105%"></span>
+
+			
+	<span class="feature_icon"><img src="img/secure1-02.png" width="105%"></span>
+			
+	<span class="feature_icon"><img src="img/convenient-05.png" width="105%"></span>
+			
+	<span class="feature_icon"><img src="img/fast-04.png" width="105%"></span>
+			
+	<span class="feature_icon"><img src="img/smart-01.png" width="105%"></span>
+		
+		
+  </div>
+	
+
+		
+	<div class="p2_c_d_p1">Secure Financial Services, Inc. provides hight quality trade analysis<br> 
+				reports, starting with the standard profit and loss analysis, for targeted<br>
+				legal response.</div>
+		
+	<div class="p2_c_d_p2">See Videos</div>
+	
   </div>
   <div class="block3">
   </div>      
