--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
 	
   </div>
   <div class="block3">
+	  <div class="p3_whole">
+		
+	<span class="video"><iframe width="310%" height="270%" src="https://www.youtube.com/embed/QbTYWE2Bv00?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></span>
+					
+	<div class="video_title">How FinTech is Shaping the Future <br>
+		    of Banking</div>
+			
+	<div class="video_text">While FinTech is revolutionizing the banking industry and giving<br>
+ 				millions of people access to financial services for the first time,<br>
+				new banking models are emerging with FinTech start-ups and<br>
+ 				tech firms potentially disrupting the status quo. But business<br>
+ 				schools and universities are now preparing future bankers for<br>
+ 				theses changes, says FinTech thought leader Hnri Arslanian.</div>
+		
+		
+  </div>
   </div>      
 </body>
 </html>
