--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="theme">
 	<span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 	<span class="Fintech">Fintech</span>
-	<span class="th_sub"><a target = "_blank" href="" style="color:white;">Home</a></span>
+	<a target = "_blank" href="" style="color:white;"><span class="th_sub">Home</span></a>
 	<a target = "_blank" href=""><span class="th_sub">About</span></a>
 	<a target = "_blank" href=""><span class="th_sub">Sign in</span></a> 
     </div>  
