--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	<div class="p2_c_d_p2">See Videos</div>
 	
   </div>
-
-	  <div class="p3_whole">
+  <div class="block3">
+	  
 		
 	<span class="video"><iframe width="310%" height="270%" src="https://www.youtube.com/embed/QbTYWE2Bv00?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></span>
 					
