--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 	
   </div>
   <div class="block3">
-	  
-		
+	  <div class="p3_whole">
 	<span class="video"><iframe width="310%" height="270%" src="https://www.youtube.com/embed/QbTYWE2Bv00?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></span>
 					
 	<div class="video_title">How FinTech is Shaping the Future <br>
@@ -74,7 +73,7 @@
  				schools and universities are now preparing future bankers for<br>
  				theses changes, says FinTech thought leader Hnri Arslanian.</div>
 		
-		
+		</div>
 
   </div>      
 </body>
