--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style> a{text-decoration:none} </style>
 </head>
 
-<body>
+<body style="margin:0;">
   <div class="block1">	 
     <div class="theme">
 	<span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
