--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <title>Fintech</title>
   <style> a{text-decoration:none} </style>
+  <style type="text/css">
+      body {overflow-x:hidden;}
+</style>
 </head>
 
 <body style="margin:0;">
