--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style type="text/css">
       body {overflow-x:hidden;}
 </style>
+	<script src="js/app.js"></script>
 </head>
 
 <body style="margin:0;">
