Add dropdown navbar_v1

--- a/index.html
+++ b/index.html
@@ -15,9 +15,29 @@
     <div class="theme">
 	<span class="th_sub_f"><img src="img/fintech_logo.png" width="50%"></span>
 	<span class="Fintech">Fintech</span>
-	<a target = "_blank" href="" style="color:white;"><span class="th_sub">Home</span></a>
-	<a target = "_blank" href=""><span class="th_sub">About</span></a>
-	<a target = "_blank" href=""><span class="th_sub">Sign in</span></a> 
+	<div class="navbar">
+		<a class="th_sub">Home</a>
+		<div class="navbar_content">
+			<a>General Erhou</a>
+			<a>Bao</a>
+			<a>Maid</a>
+		</div>
+	</div>
+	<div class="navbar">
+		<a class="th_sub">About</a>
+		<div class="navbar_content">
+			<a>General Erhou</a>
+			<a>Trout</a>
+		</div>
+	</div>
+	<div class="navbar">
+		<a class="th_sub">Sign in</a>
+		<div class="navbar_content">
+			<a>Sign in</a>
+			<a>New</a>
+			<a>Forget Password?</a>
+		</div>
+	</div> 
     </div>  
 	<!--<p class="FintechMoney">
 		Fintech Money
