--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				reports, starting with the standard profit and loss analysis, for targeted<br>
 				legal response.</div>
 		
-	<div class="p2_c_d_p2"><img src="img/see video-06.png"></div>	
+	<div class="p2_c_d_p2"><img src="img/see video-06).png" width=15vw></div>	
   </div>
   <div class="block3">
 	  <div class="p3_whole">
