--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
 	<!--<p class="FintechMoney">
 		Fintech Money
 	  </p>-->
-	  	<span class="download"><img src="img/download.png" width="120%" ></span> 
-   	 	<span class="apple"><ah target = "_blank" href="https://itunes.apple.com"><img src="img/app_store.png"  width="80%"></ah></span>
-		<span class="google"><ah target = "_blank" href="https://play.google.com"><img src="img/google_play.png" width="80%" ></ah></span>  
-	        <span class="fb"><ah target = "_blank" href="https://facebook.com"><img src="img/fb.png" width="100%"></ah></span>
-	        <span class="youtube"><ah target = "_blank" href="https://youtube.com"><img src="img/youtube.png" width="100%"></ah></span>
-	        <span class="mail"><ah target = "_blank" href><img src="img/mail.png" width="100%"></ah></span><!--沒有放網頁，只是做成類超連結-->
+	  	<h><span class="download"><img src="img/download.png" width="120%" ></span></h>
+   	 	<h><span class="apple"><a target = "_blank" href="https://itunes.apple.com">
+			<img src="img/app_store.png"  width="80%"></a></span></h>
+		<h><span class="google"><a target = "_blank" href="https://play.google.com">
+			<img src="img/google_play.png" width="80%" ></a></span></h>
+	        <h><span class="fb"><a target = "_blank" href="https://facebook.com">
+			<img src="img/fb.png" width="100%"></a></span></h>
+	        <h><span class="youtube"><a target = "_blank" href="https://youtube.com">
+			<img src="img/youtube.png" width="100%"></a></span></h>
+	        <h><span class="mail"><a target = "_blank" href>
+			<img src="img/mail.png" width="100%"></a></span></h><!--沒有放網頁，只是做成類超連結-->
   	<div class="p1_r_c">
 		<span class="fintech_w">Fintech</span>
 		<span class="fintech_t">Save your money<br>
@@ -84,7 +89,9 @@
   </div>
   <div class="block3">
 	  <div class="p3_whole">
-	<span class="video"><iframe width="310%" height="270%" src="https://www.youtube.com/embed/QbTYWE2Bv00?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></span>
+	<span class="video"><iframe width="310%" height="270%" 
+				    src="https://www.youtube.com/embed/QbTYWE2Bv00?rel=0&amp;controls=0&amp;showinfo=0" 
+				    frameborder="0" allowfullscreen></iframe></span>
 					
 	<div class="video_title">How FinTech is Shaping the Future <br>
 		    of Banking</div>
