--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 	<!--<p class="FintechMoney">
 		Fintech Money
 	  </p>-->
-	  	<h><span class="download"><img src="img/download.png" width="120%" ></span></h>
-   	 	<h><span class="apple"><a target = "_blank" href="https://itunes.apple.com">
-			<img src="img/app_store.png"  width="80%"></a></span></h>
-		<h><span class="google"><a target = "_blank" href="https://play.google.com">
-			<img src="img/google_play.png" width="80%" ></a></span></h>
-	        <h><span class="fb"><a target = "_blank" href="https://facebook.com">
-			<img src="img/fb.png" width="100%"></a></span></h>
-	        <h><span class="youtube"><a target = "_blank" href="https://youtube.com">
-			<img src="img/youtube.png" width="100%"></a></span></h>
-	        <h><span class="mail"><a target = "_blank" href>
-			<img src="img/mail.png" width="100%"></a></span></h><!--沒有放網頁，只是做成類超連結-->
+	  	<span class="download"><h><img src="img/download.png" width="120%" ></h></span>
+   	 	<span class="apple"><a target = "_blank" href="https://itunes.apple.com"><h>
+			<img src="img/app_store.png"  width="80%"></h></a></span>
+		<span class="google"><a target = "_blank" href="https://play.google.com"><h>
+			<img src="img/google_play.png" width="80%" ></h></a></span>
+	        <span class="fb"><a target = "_blank" href="https://facebook.com"><h>
+			<img src="img/fb.png" width="100%"></h></a></span>
+	        <span class="youtube"><a target = "_blank" href="https://youtube.com"><h>
+			<img src="img/youtube.png" width="100%"></h></a></span>
+	        <span class="mail"><a target = "_blank" href><h>
+			<img src="img/mail.png" width="100%"></h></a></span><!--沒有放網頁，只是做成類超連結-->
   	<div class="p1_r_c">
 		<span class="fintech_w">Fintech</span>
 		<span class="fintech_t">Save your money<br>
