--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<!--<p class="FintechMoney">
 		Fintech Money
 	  </p>-->
-	  	<span class="download"><h><img src="img/download.png" width="120%" ></h></span>
+	  	<span class="download"><img src="img/download.png" width="120%" ></span>
    	 	<span class="apple"><a target = "_blank" href="https://itunes.apple.com"><h>
 			<img src="img/app_store.png"  width="80%"></h></a></span>
 		<span class="google"><a target = "_blank" href="https://play.google.com"><h>
