--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="css/general.css">	
-<link rel="stylesheet" type="text/css" href="css_div1.css">
-<link rel="stylesheet" type="text/css" href="css_div2.css">	
+<link rel="stylesheet" type="text/css" href="css/css_div1.css">
+<link rel="stylesheet" type="text/css" href="css/css_div2.css">	
 <head>
   <title>Fintech</title>
   <style> a{text-decoration:none} </style>
