--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="css/general.css">	
 <link rel="stylesheet" type="text/css" href="css/css_div1.css">
 <link rel="stylesheet" type="text/css" href="css/css_div2.css">	
+<link rel="stylesheet" type="text/css" href="css/css_div3.css">	
 <head>
   <title>Fintech</title>
   <style> a{text-decoration:none} </style>
