--- a/index.html
+++ b/index.html
@@ -20,25 +20,21 @@
 	<span class="Fintech">Fintech</span>
 	<div class="navbar">
 		<a class="th_sub">Home</a>
-		<div class="navbar_content">
-			<a>General Erhou</a>
-			<a>Bao</a>
-			<a>Maid</a>
-		</div>
 	</div>
 	<div class="navbar">
 		<a class="th_sub">About</a>
 		<div class="navbar_content">
-			<a>General Erhou</a>
-			<a>Trout</a>
+			<a>History</a>
+			<a>Nowadays</a>
+			<a>Future</a>
 		</div>
 	</div>
 	<div class="navbar">
 		<a class="th_sub">Sign in</a>
 		<div class="navbar_content">
-			<a>Sign in</a>
-			<a>New</a>
-			<a>Forget Password?</a>
+			<a>Register</a>
+			<a>Donate</a>
+			<a>VIP</a>
 		</div>
 	</div> 
     </div>  
