--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <link rel="stylesheet" type="text/css" href="css/general.css">	
 <link rel="stylesheet" type="text/css" href="css/css_div1.css">
 <link rel="stylesheet" type="text/css" href="css/css_div2.css">	
-<link rel="stylesheet" type="text/css" href="css/css_div3.css">	
+<link rel="stylesheet" type="text/css" href="css/css_div3.css">
+<script src="js/app.js"></script>
 <head>
   <title>Fintech</title>
   <style> a{text-decoration:none} </style>
