--- a/index.html
+++ b/index.html
@@ -64,18 +64,20 @@
 	  <div class="p2_c_t">
 		
 	<div class="feature">Features</div>
+	
+	<div class="feature_icon">
 		
-	<span class="feature_icon"><img src="img/cheap-03.png" width="150%"></span>
-
+	<span><img id='0' src="img/cheap-03.png" width="150%"></span>
+	
+	<span><img id='1' src="img/secure1-02.png" width="150%"></span>
 			
-	<span class="feature_icon"><img src="img/secure1-02.png" width="150%"></span>
+	<span><img id='2' src="img/convenient-05.png" width="150%"></span>
 			
-	<span class="feature_icon"><img src="img/convenient-05.png" width="150%"></span>
+	<span><img id='3' src="img/fast-04.png" width="150%"></span>
 			
-	<span class="feature_icon"><img src="img/fast-04.png" width="150%"></span>
-			
-	<span class="feature_icon"><img src="img/smart-01.png" width="150%"></span>
+	<span><img id='4' src="img/smart-01.png" width="150%"></span>
 		
+	</div>
 		
   </div>
 	
