--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </div>
    </div>
       <div class="g_content">
-      <p class="p2_c_d_p1" id=text >請將滑鼠放到圖示上</p>
+      <p class="p2_c_d_p1" id=text >請將滑鼠放到圖示的橫桿上</p>
       </div>
       </div>
       
