--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 	  
 	  
-	<div class="p2_c_d_p2"><img src="img/see video-06).png" width=100%></div>
+	<div class="p2_c_d_p2"><a href="#LastLine"><img src="img/see video-06).png" width=100%></a></div>
   </div>
   <div class="block3">
 	  <div class="p3_whole">
